Updated baseurl reference
This makes it easier to copy and paste the source and matches what’s on
hcpss.org. {{site.baseurl}} variable can be used whenever the root
needs to be used.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 
 # the subpath of your site, e.g. /blog/
-baseurl: "/academies"
+baseurl: ""
 
 # Build settings
 markdown: kramdown
